ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Reaction__c.field-meta.xml
<CustomField>
    <fullName>Reaction__c</fullName>
    <label>Reaction</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amination</fullName>
            </value>
            <value>
                <fullName>Aziridination</fullName>
            </value>
            <value>
                <fullName>Carbon-carbon bond formation-General</fullName>
            </value>
            <value>
                <fullName>Carbon-carbon bond formation-Cross coupling</fullName>
            </value>
            <value>
                <fullName>Carbon-carbon bond formation-Heck Reaction</fullName>
            </value>
            <value>
                <fullName>Carbon-heteroatom bond formation</fullName>
            </value>
            <value>
                <fullName>Cyclization</fullName>
            </value>
            <value>
                <fullName>Cyclopropanation</fullName>
            </value>
            <value>
                <fullName>Decarbonylation</fullName>
            </value>
            <value>
                <fullName>Decarboxylation</fullName>
            </value>
            <value>
                <fullName>Dehydrogenation</fullName>
            </value>
            <value>
                <fullName>Deoxyfluorination</fullName>
            </value>
            <value>
                <fullName>Hydroboration</fullName>
            </value>
            <value>
                <fullName>Hydroformylation</fullName>
            </value>
            <value>
                <fullName>Hydrogenation</fullName>
            </value>
            <value>
                <fullName>Hydrolysis</fullName>
            </value>
            <value>
                <fullName>Hydrosilyation</fullName>
            </value>
            <value>
                <fullName>Epoxidation</fullName>
            </value>
            <value>
                <fullName>Isomerization</fullName>
            </value>
            <value>
                <fullName>Kinetic Resolution</fullName>
            </value>
            <value>
                <fullName>Metathesis</fullName>
            </value>
            <value>
                <fullName>Oxidation</fullName>
            </value>
            <value>
                <fullName>Ring Opening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>