ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/S_Steel_bubbler_extra__c.field-meta.xml
<CustomField>
    <fullName>S_Steel_bubbler_extra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S_Steel_bubbler_extra</label>
    <type>Checkbox</type>
</CustomField>