ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/SDS_URL_FR__c.field-meta.xml
<CustomField>
    <fullName>SDS_URL_FR__c</fullName>
    <label>SDS_URL_FR</label>
    <type>Url</type>
</CustomField>