ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Ship_in_Dry_Ice__c.field-meta.xml
<CustomField>
    <fullName>Ship_in_Dry_Ice__c</fullName>
    <label>Ship in Dry Ice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>