ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Show_CAS__c.field-meta.xml
<CustomField>
    <fullName>Show_CAS__c</fullName>
    <formula>NOT(ISBLANK(CAS__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show CAS</label>
    <type>Checkbox</type>
</CustomField>