ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Sort_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sort_Formula__c</fullName>
    <label>Sort Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>