ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Spec__c.field-meta.xml
<CustomField>
    <fullName>Spec__c</fullName>
    <label>Spec</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>