ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Spec_Rotation__c.field-meta.xml
<CustomField>
    <fullName>Spec_Rotation__c</fullName>
    <label>Spec Rotation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>