ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/ST_Addnl_3__c.field-meta.xml
<CustomField>
    <fullName>ST_Addnl_3__c</fullName>
    <label>ST Addnl 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>