ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Stench__c.field-meta.xml
<CustomField>
    <fullName>Stench__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stench</label>
    <type>Checkbox</type>
</CustomField>