ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Store_Cold__c.field-meta.xml
<CustomField>
    <fullName>Store_Cold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Cold</label>
    <type>Checkbox</type>
</CustomField>