ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Strem_Synonym__c.field-meta.xml
<CustomField>
    <fullName>Strem_Synonym__c</fullName>
    <label>Strem Synonym</label>
    <length>255</length>
    <type>Text</type>
</CustomField>