ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Surface_Area__c.field-meta.xml
<CustomField>
    <fullName>Surface_Area__c</fullName>
    <label>Surface Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>