ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Surface_Area_Site__c.field-meta.xml
<CustomField>
    <fullName>Surface_Area_Site__c</fullName>
    <description>This will display Surface Area on Site.</description>
    <label>Surface Area Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>