ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/TCI_No__c.field-meta.xml
<CustomField>
    <fullName>TCI_No__c</fullName>
    <label>TCI#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>