ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Technical_note__c.field-meta.xml
<CustomField>
    <fullName>Technical_note__c</fullName>
    <label>Technical note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>