ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Technical_Notes_URL__c.field-meta.xml
<CustomField>
    <fullName>Technical_Notes_URL__c</fullName>
    <label>Technical Notes URL</label>
    <type>Url</type>
</CustomField>