ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Truck__c.field-meta.xml
<CustomField>
    <fullName>Truck__c</fullName>
    <label>Truck</label>
    <length>255</length>
    <type>Text</type>
</CustomField>