ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Unit_Size__c.field-meta.xml
<CustomField>
    <fullName>Unit_Size__c</fullName>
    <label>Unit Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>