ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/UnSeen_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>UnSeen_Product_Family__c</fullName>
    <label>UnSeen Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>