ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/UNSPSC_No__c.field-meta.xml
<CustomField>
    <fullName>UNSPSC_No__c</fullName>
    <label>UNSPSC_No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>