ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/US_GHS_Hazard_statements__c.field-meta.xml
<CustomField>
    <fullName>US_GHS_Hazard_statements__c</fullName>
    <label>US GHS-Hazard statements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>