ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/US_GHS_Precautionary_Statements__c.field-meta.xml
<CustomField>
    <fullName>US_GHS_Precautionary_Statements__c</fullName>
    <label>US GHS-Precautionary Statements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>