ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Vapor_pressure__c.field-meta.xml
<CustomField>
    <fullName>Vapor_pressure__c</fullName>
    <label>Vapor pressure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>