ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Product_Item__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.PRODUCT_TYPE</columns>
    <columns>PRODUCT2.SKU</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>P_Booklet__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Price_inc_non_ret_cyl__c</columns>
    <columns>Price_per_qty_contained__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>